fixed gplots dependency
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ABAEnrichment@115904 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/ABAEnrichment.Rmd
+++ b/vignettes/ABAEnrichment.Rmd
@@ -195,4 +195,4 @@ sessionInfo()
 (Internet). Available from: [http://brainspan.org/]
 
 [5] Pruefer, K. et al. (2007) FUNC: A package for detecting significant associations between gene
-sets and ontological, BMC Bioinformatics 8: 41. [doi:10.1186/1471-2105-8-41]
+sets and ontological annotations, BMC Bioinformatics 8: 41. [doi:10.1186/1471-2105-8-41]
