--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,14 @@
 
+
+changes in version 1.3.5
+
+NEW FEATURES
+
+* functions get_name, get_superstructures and get_sampled_substructures now also accept structure-IDs without the "Allen:"-prefix as input (like data are provided in ABAData-package)
+
+
+changes in version 1.3.4
+
 BUG FIXES
 
 * fixed error in get_expression(..., dataset="5_stages") message ("returning log2(RPKM)" to "returning RPKM") 
