--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 1.3.6
+------------------------
+
+NEW FEATURES
+
+	o Add figure to vignette describing the FWER calculation 
+	  for the hypergeometric test.
+
+
 CHANGES IN VERSION 1.3.5
 ------------------------
 
