--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,13 @@
+CHANGES IN VERSION 1.3.7
+------------------------
+
+NEW FEATURES
+
+	o Add figure to vignette describing the effect of
+	  the "circ_chrom"-option when genomic regions are
+	  used as input
+	  
+
 CHANGES IN VERSION 1.3.6
 ------------------------
 
@@ -5,6 +15,7 @@ NEW FEATURES
 
 	o Add figure to vignette describing the FWER calculation 
 	  for the hypergeometric test.
+
 
 
 CHANGES IN VERSION 1.3.5
