--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,66 +1,8 @@
-CHANGES IN VERSION 1.3.7
+CHANGES IN VERSION 1.5.1
 ------------------------
 
-NEW FEATURES
+IMPROVEMENTS
 
-	o Add figure to vignette describing the effect of
-	  the "circ_chrom"-option when genomic regions are
-	  used as input
-	  
-
-CHANGES IN VERSION 1.3.6
-------------------------
-
-NEW FEATURES
-
-	o Add figure to vignette describing the FWER calculation 
-	  for the hypergeometric test.
-
-
-
-CHANGES IN VERSION 1.3.5
-------------------------
-
-NEW FEATURES
-
-	o The new option 'gene_len' creates random sets for the FWER 
-	  of the hypergeometric test dependent on the gene lengths.
-
-	o In addition to explicitly naming the candidate genes,
-	  it is now possible to define entire genomic regions
-	  as candidate and background regions. 
-	  The names of the 'genes' vector have to be 
-	  of the form 'chr:start-stop' to use this option.
-
-	o The background regions by default are independent.
-	  But using the option 'circ_chrom = TRUE', background 
-	  regions on the same chromosome as the candidate region
-	  are used and random candidate regions are allowed to
-	  overlap multiple background regions.
-	  
-SIGNIFICANT USER-LEVEL CHANGES
-	  
-	o cutoff-quantiles are now computed using all protein coding
-	  genes and not just input candidate and background genes.  
-
-
-CHANGES IN VERSION 1.3.4
-------------------------
-
-NEW FEATURES
-
-	o functions get_name, get_superstructures and 
-	  get_sampled_substructures now also accept structure-IDs 
-	  without the "Allen:"-prefix as input 
-	  (like data are provided in ABAData-package).
-
-
-CHANGES IN VERSION 1.3.3
-------------------------
-
-BUG FIXES
-
-	o fixed error in get_expression(..., dataset="5_stages")- 
-	  message ("returning log2(RPKM)" to "returning RPKM"). 
-
+	o Improved checking of arguments when genomic regions are
+	  provided as input
 
