--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.5.5
+------------------------
+
+BUG FIXES
+
+	o Fix floating point inaccuracy in FWER calculation
+
+
 CHANGES IN VERSION 1.5.1
 ------------------------
 
@@ -5,4 +13,3 @@ IMPROVEMENTS
 
 	o Improved checking of arguments when genomic regions are
 	  provided as input
-
