--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,9 +1,17 @@
+CHANGES IN VERSION 1.5.6
+------------------------
+
+IMPROVEMENTS
+
+	o Added more tests and checks
+
+
 CHANGES IN VERSION 1.5.5
 ------------------------
 
 BUG FIXES
 
-	o Fix floating point inaccuracy in FWER calculation
+	o Fixed floating point inaccuracy in FWER calculation
 
 
 CHANGES IN VERSION 1.5.1
